--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextNumberDecimal"
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:hint="请输入摄氏温度" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="转换为华氏温度"
-        android:onClick="btn"/>
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/textView5" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:textSize="40sp"
+        android:layout_marginBottom="65dp"
+        android:text="0"/>
+
+    <Button
+        android:id="@+id/buttona"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="结果为：" />
+        android:layout_marginBottom="35dp"
+        android:text="@string/buttona"
+        android:onClick="btna"/>
+
+    <Button
+        android:id="@+id/buttonb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:text="@string/buttonb"
+        android:onClick="btnb"/>
+
+    <Button
+        android:id="@+id/buttonc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:text="@string/buttonc"
+        android:onClick="btnc"/>
+
+    <Button
+        android:id="@+id/buttond"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/buttond"
+        android:onClick="reset"/>
+
 </LinearLayout>
