在MainActivity2.java中使用SharedPreferences保存上一次更新日期，使得应用每天更新一次汇率数据，而不是每次打开该页面都会更新数据。MainActivity2_1.java中使用列表显示数据（ArrayAdapter<String>），对应的布局文件是activity_main_activity2_1.xml；list_item.xml是关于列表的行布局文件；MainActivity3.java中使用自定义列表显示数据（SimpleAdapter）（其他页面的功能还未完善）

--- a/app/src/main/res/layout/activity_main_activity2_1.xml
+++ b/app/src/main/res/layout/activity_main_activity2_1.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".MainActivity2" >
+    tools:context=".MainActivity2_1" >
 
     <EditText
         android:id="@+id/dollarRate"
@@ -35,18 +35,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:onClick="saveconfig_return"
         android:text="@string/btn_save_config" />
 
-    <Button
-        android:id="@+id/btn_rate_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
-        android:onClick="newRateList"
-        android:text="@string/btn_rate_list" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/mylist" />
 
 </LinearLayout>
