--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -15,4 +15,12 @@
         android:layout_alignParentStart="true"
         android:id="@+id/mylist1" />
 
+    <TextView
+        android:id="@+id/nodata"
+        android:text="No Data"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
